@@ -7,6 +7,7 @@ ver 0.14.2 (2009/??/??)
   - jack: allocate ring buffers before connecting
   - jack: clear "shutdown" flag on reconnect
   - jack: reduced sleep time to 1ms
+  - shout: fixed memory leak in the mp3 encoder
 * mapper: remove trailing slashes from music_directory
 * player: set player error when output device fails
 
